refactor radarservices