@@ -3,16 +3,12 @@ package Services;
 import Models.*;
 
 import java.util.*;
-import java.util.stream.*;
 
 public class PlayerService {
     static public List<GameObject> getOtherPlayerList(GameState gameState, GameObject bot) {
         // Mengembalikan List Player Lainnya
-        return gameState.getPlayerGameObjects()
-                .stream().filter(item -> item.getId() != bot.getId())
-                .sorted(Comparator
-                        .comparing(item -> RadarService.getRealDistance(bot, item)))
-                .collect(Collectors.toList());
+
+        return RadarService.players;
     }
 
     static public List<GameObject> getNearestPlayers(GameState gameState, GameObject bot)
@@ -27,15 +23,12 @@ public class PlayerService {
         int i = 1;
         double distance = RadarService.getRealDistance(bot, players.get(0));
 
-        while (i < players.size() && Math.abs(RadarService.getRealDistance(bot, players.get(i)) - distance) < Double.MIN_VALUE)
+        while (i < players.size() && RadarService.getRealDistance(bot, players.get(i)).equals(distance))
         {
             res.add(players.get(i));
         }
 
-        return res.stream()
-            .sorted(Comparator
-                    .comparing(item -> item.id))
-            .collect(Collectors.toList());
+        return res;
 
     }
 
@@ -56,55 +49,30 @@ public class PlayerService {
 
     static public List<GameObject> getBiggerPlayerInRange(GameState gameState, GameObject bot, int range) {
         // Mengembalikan List Player yang lebih besar dari bot
-        return gameState.getPlayerGameObjects()
-                .stream().filter(item -> item.getId() != bot.getId() && !isBotBigger(bot, item) && RadarService.getRealDistance(bot, item) <= range)
-                .sorted(Comparator
-                        .comparing(item -> RadarService.getRealDistance(bot, item)))
-                .collect(Collectors.toList());
+
+        return RadarService.players.stream().filter(item -> !isBotBigger(bot, item) && RadarService.getRealDistance(bot, item) <= range).toList();
+
     }
 
     static public List<GameObject> getPreys(GameState gameState, GameObject bot, int offset) {
         // Mengembalikan List Player yang lebih besar dari bot
-        return gameState.getPlayerGameObjects()
-                .stream().filter(item -> item.getId() != bot.getId() && isBotBigger(bot, item, offset))
-                .sorted(Comparator
-                        .comparing(item -> RadarService.getRealDistance(bot, item)))
-                .collect(Collectors.toList());
+
+        return RadarService.players.stream().filter(item -> isBotBigger(bot, item, offset)).toList();
     }
 
     static public WorldVector getEscapePlayerVector(List<GameObject> others, GameObject bot) {
         // Mengembalikan Vektor arah player bila ingin kabur
         // Others diisi dengan bigger players bukan other players
-        WorldVector res = new WorldVector();
 
-        others.forEach((player) -> {
-            WorldVector temp = RadarService.degreeToVector(RadarService.getHeadingBetween(player, bot));
-            double distance = RadarService.getRealDistance(player, bot);
-
-            double weight = distance;
-            
-            if (Math.abs(RadarService.roundToEven(weight)) < Double.MIN_VALUE) weight = 10e-3;
-         
-            // Menghitung Rata-Rata Vektor dari Semua Arah Kemungkinan Kabur
-            res.add(temp.div(weight));
-        });
-
-        return res.toNormalize();
+        return FieldService.getHeadingEscape(bot, others);
     }
 
     static public WorldVector getChasePlayerVector(List<GameObject> preys, GameObject bot) {
         // Mengembalikan Vektor mengejar player lebih kecil
-        WorldVector res = new WorldVector();
 
-        preys.forEach((prey) -> {
-            WorldVector temp = RadarService.degreeToVector(RadarService.getHeadingBetween(bot, prey));
-            double distance = RadarService.getRealDistance(prey, bot);
-            if (Math.abs(distance) < Double.MIN_VALUE) distance = 0.001 * (distance < 0? -1 : 1);
-            else distance = RadarService.roundToEven(distance);
-            // Menghitung Rata-Rata Vektor dari Semua Arah Kemungkinan Kabur
-            res.add(temp.div(distance));
-        });
+        return FieldService.getHeadingEscape(bot, preys);
+        // WorldVector res = new WorldVector();
 
-        return res.toNormalize();
+        // int count = 0;
     }
 }
